Chapter 39 In class
Window Builder Templates & GUI drap n drop features

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,5 @@ pip-log.txt
 # Mac crap
 .DS_Store
 /Java2_Projects/LangWeb/nbproject/private/
+/NetBeansProjects/Exercise39_5/nbproject/private/
+/NetBeansProjects/LangWeb/nbproject/private/
