Working on Chapter 39 Assignment
Exercise 39.13 - using Netbeans as IDE

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ pip-log.txt
 /Java2_Projects/LangWeb/nbproject/private/
 /NetBeansProjects/Exercise39_5/nbproject/private/
 /NetBeansProjects/LangWeb/nbproject/private/
+/NetBeansProjects/Poll/nbproject/private/
