Chapter 40 Inclass Exercise 40.15

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,4 @@ pip-log.txt
 /NetBeansProjects/Exercise39_5/nbproject/private/
 /NetBeansProjects/LangWeb/nbproject/private/
 /NetBeansProjects/Poll/nbproject/private/
+/NetBeansProjects/Chapter40_15/nbproject/private/
